fixes z-indexs to svg ans svg box

--- a/imports/ui/styles/components/_slideA.scss
+++ b/imports/ui/styles/components/_slideA.scss
@@ -163,7 +163,7 @@
     height: 100%;
     overflow: hidden;
     position: absolute;
-    z-index: 0;
+    z-index: 100;
     bottom: 0;
     height: 100%;
     opacity: 0;
@@ -178,7 +178,7 @@
 
 .svg-box {
     position: absolute;
-    z-index: 0;
+    z-index: 101;
     left: 0;
     color: black;
     width: 40%;
